python/src/gateway/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: gateway
  labels:
    app: gateway

spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: mnkordjani99/gateway-service:latest
          ports:
            - containerPort: 8080
