python/src/gateway/manifests/gateway-deploy.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: gateway
  labels:
    app: gateway

spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2

  selector:
    matchLabels:
      app: gateway

  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: mnkordjani99/gateway-service:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service

metadata:
  name: gateway-service
  labels:
    app: gateway

spec:
  type: ClusterIP

  selector:
    app: gateway

  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
