python/src/gateway/manifests/service.yml
apiVersion: v1
kind: Service

metadata:
  name: gateway-service
  labels:
    app: gateway

spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
